# yac-engine

./: .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  board.cpp  board.h  chessboard.cpp  chessboard.h  constants.h  engine.cpp  engine.h  mcts.h  util.cpp  util.h  yace.cpp
test/: CMakeLists.txt  board-test.cpp  board-tests.cpp  game-test.cpp  game-tests.cpp  general-tests.cpp  move-tests.cpp  perft-test.cpp  perft-tests.cpp
